Changes to colour picker. (Bug: Issue with z-index of modal)

--- a/css/cover.css
+++ b/css/cover.css
@@ -34,6 +34,14 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
+h4 {
+	color:#000000;
+}
+
+h5 {
+	color:#000000;
+}
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
