--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,17 @@
  */
  
  .drawing-canvas {
-   background-color: transparent;   
+   background-color: transparent;
  }
+ 
  .canvas-wrapper {
+  z-index: 0;
   width: 100%;
   height: 800px;
   overflow-y: scroll;
   padding-top: 10px;
   position: relative;
-  top: 60px
+  top: 250px
 }
 
 #mainCanvas {
